--- a/LeckerBag/WebContent/dashboard_kunde.html
+++ b/LeckerBag/WebContent/dashboard_kunde.html
@@ -84,11 +84,11 @@
                                     <h5>Ihre letzten Abonnements</h5>
                                     <ul class="pg-empty-placeholder" data-pg-collapsed>
                                         <li data-pg-collapsed="" class="abonnement_element">
-                                            <p color="#5b586b"><font class="beschreibung">Produkt:</font> 30-Tage-Abonnement <br> <font class="beschreibung">Kind: </font> <a>Arnold Mustermann</a> <br> <font class="beschreibung">Laufzeit: </font>15.09.15<br><font class="preisfarbe"> EUR 24,95 </font> (<a>Abonnementetails</a>)</p>
+                                            <p color="#5b586b"><font class="beschreibung">Produkt:</font> 30-Tage-Abonnement <br> <font class="beschreibung">Kind: </font> <a>Arnold Mustermann</a> <br> <font class="beschreibung">Laufzeit: </font>15.09.15<br><font class="preisfarbe"> EUR 24,95 </font> (<a href="1_details_abo.html">Abonnementetails</a>)</p>
                                             <button type="button" class="btn btn-default button_paulo">nochmals bestellen</button>
                                         </li>
                                         <li class="abonnement_element">
-                                            <p color="#5b586b"><font class="beschreibung">Produkt:</font> 60-Tage-Abonnement <br> <font class="beschreibung">Kind: </font> <a>Bernadette Mustermann</a> <br> <font class="beschreibung">Laufzeit: </font>01.10.15<br><font class="preisfarbe"> EUR 44,95 </font> (<a>Abonnementetails</a>)</p>
+                                            <p color="#5b586b"><font class="beschreibung">Produkt:</font> 60-Tage-Abonnement <br> <font class="beschreibung">Kind: </font> <a>Bernadette Mustermann</a> <br> <font class="beschreibung">Laufzeit: </font>01.10.15<br><font class="preisfarbe"> EUR 44,95 </font> (<a href="1_details_abo.html">Abonnementetails</a>)</p>
                                             <button type="button" class="btn btn-default button_paulo">nochmals bestellen</button>
                                         </li>
                                         <li data-pg-collapsed="">
@@ -100,7 +100,7 @@
                                     <div class="row last_element_dash" data-pg-collapsed>
                                         <hr class="hr_line hr_line_ext_dashboard_last">
                                         <div class="col-md-12">
-                                            <a>Alle Abonnements anzeigen</a> 
+                                            <a href="2_uebersicht_abo.html">Alle Abonnements anzeigen</a> 
                                         </div>
                                     </div>
                                 </div>
@@ -206,22 +206,22 @@
         		function(Y) {
         			var events = [
         			    {
-        					content: '<p color="#5b586b"><font class="beschreibung">Produkt:</font> <a>100652001</a> Brötchen mit Salami, Apfel, Milch <br> <font class="beschreibung">Kind: </font> <a>Arnold Mustermann</a> <br> <font class="beschreibung">Lieferdatum: </font>01.09.15<br>(<a>Bestelldetails</a>)</p></br><button type="button" class="btn btn-default button_paulo">stornieren</button>',
+        					content: '<p color="#5b586b"><font class="beschreibung">Produkt:</font> <a>100652001</a> Brötchen mit Salami, Apfel, Milch <br> <font class="beschreibung">Kind: </font> <a>Arnold Mustermann</a> <br> <font class="beschreibung">Lieferdatum: </font>01.09.15<br>(<a href="3_details_bestellung.html">Bestelldetails</a>)</p></br><button type="button" class="btn btn-default button_paulo">stornieren</button>',
         					endDate: new Date(2015, 8, 1, 10,15),
         					startDate: new Date(2015, 8, 1, 9,45)
         			    },
         			    {
-        					content: '<p color="#5b586b"><font class="beschreibung">Produkt:</font> <a>100652011</a> Mehrkornbrötchen mit Käse, Birne, Kakao&nbsp;<br> <font class="beschreibung">Kind: </font> <a>Bernadette Mustermann</a> <br> <font class="beschreibung">Lieferdatum: </font>01.09.15<br>(<a>Bestelldetails</a>)</p></br><button type="button" class="btn btn-default button_paulo">stornieren</button>',
+        					content: '<p color="#5b586b"><font class="beschreibung">Produkt:</font> <a>100652011</a> Mehrkornbrötchen mit Käse, Birne, Kakao&nbsp;<br> <font class="beschreibung">Kind: </font> <a>Bernadette Mustermann</a> <br> <font class="beschreibung">Lieferdatum: </font>01.09.15<br>(<a href="3_details_bestellung.html">Bestelldetails</a>)</p></br><button type="button" class="btn btn-default button_paulo">stornieren</button>',
         					endDate: new Date(2015, 8, 1, 10,00),
         					startDate: new Date(2015, 8, 1, 9,30)
         			    },
         			    {
-        					content: '<p color="#5b586b"><font class="beschreibung">Produkt:</font> <a>100652011</a> Mehrkornbrötchen mit Käse, Birne, Kakao&nbsp;<br> <font class="beschreibung">Kind: </font> <a>Arnold Mustermann</a> <br> <font class="beschreibung">Lieferdatum: </font>01.09.15<br>(<a>Bestelldetails</a>)</p></br><button type="button" class="btn btn-default button_paulo">stornieren</button>',
+        					content: '<p color="#5b586b"><font class="beschreibung">Produkt:</font> <a>100652011</a> Mehrkornbrötchen mit Käse, Birne, Kakao&nbsp;<br> <font class="beschreibung">Kind: </font> <a>Arnold Mustermann</a> <br> <font class="beschreibung">Lieferdatum: </font>01.09.15<br>(<a href="3_details_bestellung.html">Bestelldetails</a>)</p></br><button type="button" class="btn btn-default button_paulo">stornieren</button>',
         					endDate: new Date(2015, 8, 2, 10,00),
         					startDate: new Date(2015, 8, 2, 9,30)
         			    },
         			    {
-        					content: '<p color="#5b586b"><font class="beschreibung">Produkt:</font> <a>100652002</a> Brötchen mit Schinken und Käse, Banane, Milch <br> <font class="beschreibung">Kind: </font> <a>Bernadette Mustermann</a> <br> <font class="beschreibung">Lieferdatum: </font>02.09.15<br>(<a>Bestelldetails</a>)</p></br><button type="button" class="btn btn-default button_paulo">stornieren</button>',
+        					content: '<p color="#5b586b"><font class="beschreibung">Produkt:</font> <a>100652002</a> Brötchen mit Schinken und Käse, Banane, Milch <br> <font class="beschreibung">Kind: </font> <a>Bernadette Mustermann</a> <br> <font class="beschreibung">Lieferdatum: </font>02.09.15<br>(<a href="3_details_bestellung.html">Bestelldetails</a>)</p></br><button type="button" class="btn btn-default button_paulo">stornieren</button>',
         					endDate: new Date(2015, 8, 2, 10,15),
         					startDate: new Date(2015, 8, 2, 9,30)
         			    },
