--- a/LeckerBag/WebContent/dashboard_lieferant.html
+++ b/LeckerBag/WebContent/dashboard_lieferant.html
@@ -90,7 +90,7 @@
                                 <div class="row">
                                     <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 text-center">
                                         <h1 class="rating-num">4.5</h1>
-                                        <div class="rating">
+                                        <div class="rating_paulo">
                                             <span class="fa fa-star star_green fa-lg"></span>
                                             <span class="fa fa-star  star_green fa-lg"></span>
                                             <span class="fa fa-star  star_green fa-lg"></span>
@@ -98,8 +98,7 @@
                                             <span class="fa fa-star-half-empty star_green fa-lg"></span>
                                         </div>
                                         <div data-pg-collapsed>
-                                            <a href="#"><span class="fa fa-user"></span>&nbsp;
-    702 total votes</a>
+                                            <a href="#"><span class="fa fa-user"></span>&nbsp;702 total votes</a>
                                         </div>
                                     </div>                                     
                                 </div>
@@ -141,7 +140,7 @@ Ich kann über Müllerbäck nichts schlechtes berichten.
                                 <div class="row last_element_dash" data-pg-collapsed>
                                     <hr class="hr_line hr_line_ext_dashboard_last">
                                     <div class="col-md-12">
-                                        <a>Alle Rezensionen anzeigen</a> 
+                                        <a href="8_lieferant_rezension_dash.html">Alle Rezensionen anzeigen</a> 
                                     </div>
                                 </div>
                             </div>
