--- a/LeckerBag/WebContent/mein_profil_kunde.html
+++ b/LeckerBag/WebContent/mein_profil_kunde.html
@@ -11,17 +11,17 @@
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href="css/bootstrap-responsive.css" rel="stylesheet">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
-        <script src="js/jquery.js"></script> 
+        <script src="js/jquery.js"></script>         
         <script> 
 			$(function(){
 			  $("#header").load("header.html"); 
 			  $("#footer").load("footer.html"); 
 			});
-		</script>           
+		</script>         
     </head>     
     <body>
-    <div class="row" id="header"></div>                 
-        <div class="row" data-pg-collapsed>
+        <div class="row" id="header"></div>         
+        <div class="row">
             <div class="col-md-12">
                 <div class="container wrapper">
                     <div class="row">
@@ -35,6 +35,14 @@
                         </div>
                     </div>
                     <hr class="hr_line"/>
+                    <ol class="breadcrumb" data-pg-collapsed> 
+                        <li>
+                            <a href="dashboard_kunde.html">Mein Leckerbag</a>
+                        </li>                         
+                        <li>
+                            <font>Mein Profil</font>
+                        </li>                         
+                    </ol>
                     <div class="row">
                         <div class="col-sm-12 col-xs-12 dash_element_col col-md-12 col-lg-12">
                             <div class="row dash_element_holder">
@@ -101,7 +109,7 @@
                                         <div class="col-md-4" data-pg-collapsed>
                                             <h4>Meine Kinder</h4> 
                                         </div>
-                                        <table class="table kind_tabelle_breite" data-pg-collapsed> 
+                                        <table class="table kind_tabelle_breite"> 
                                             <thead> 
                                                 <tr class="kind_liste_tabelle"> 
                                                     <th class="kind_liste_tabelle">Name</th>                                                     
@@ -119,12 +127,12 @@
                                                     <td>Röntgen Gymnasium</td>                                                     
                                                     <td>5 a</td>
                                                     <td>
-                                                        <button type="button" class="btn btn-default button_paulo button_paulo_ext_dashboard">neues Abonnement abschließen 
+                                                        <button type="button" class="btn btn-default button_paulo button_paulo_ext_dashboard" data-pg-collapsed onclick="location.href='bestellung_kunde.html'">neues Abonnement abschließen 
                                                             <i class="fa fa-chevron-right"></i> 
                                                         </button>
                                                     </td>
                                                     <td>
-                                                        <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="">
+                                                        <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="" onclick="location.href='kind_bearbeiten.html'">
                                                             <i class="glyphicon glyphicon-pencil"></i>
                                                         </button>                                                         
                                                     </td>
@@ -140,12 +148,12 @@
                                                     <td>Grundschule Süd</td>                                                     
                                                     <td>2 b</td>
                                                     <td>
-                                                        <button type="button" class="btn btn-default button_paulo button_paulo_ext_dashboard">neues Abonnement abschließen 
+                                                        <button type="button" class="btn btn-default button_paulo button_paulo_ext_dashboard" onclick="location.href='bestellung_kunde.html'">neues Abonnement abschließen 
                                                             <i class="fa fa-chevron-right"></i> 
                                                         </button>
                                                     </td>
                                                     <td>
-                                                        <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="">
+                                                        <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="" onclick="location.href='kind_bearbeiten.html'">
                                                             <i class="glyphicon glyphicon-pencil"></i>
                                                         </button>
                                                     </td>
@@ -161,12 +169,12 @@
                                                     <td>Bosch Gymnasium</td>                                                     
                                                     <td>6 d</td>
                                                     <td>
-                                                        <button type="button" class="btn btn-default button_paulo button_paulo_ext_dashboard">neues Abonnement abschließen 
+                                                        <button type="button" class="btn btn-default button_paulo button_paulo_ext_dashboard" onclick="location.href='bestellung_kunde.html'">neues Abonnement abschließen 
                                                             <i class="fa fa-chevron-right"></i> 
                                                         </button>
                                                     </td>
                                                     <td>
-                                                        <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="">
+                                                        <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="" onclick="location.href='kind_bearbeiten.html'">
                                                             <i class="glyphicon glyphicon-pencil"></i>
                                                         </button>
                                                     </td>
@@ -179,6 +187,11 @@
                                             </tbody>
                                         </table>
                                     </div>
+                                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 text-right" data-pg-collapsed>
+                                        <button type="button" class="btn-default button_paulo button_paulo_ext_dashboard">
+                                            <span></span> Kind hinzufügen 
+                                        </button>                                         
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -186,14 +199,14 @@
                 </div>                 
             </div>
         </div>         
-        <div class="row" id="footer"></div> 
-        <!-- Ende des Dokumentes -->    
+        <div class="row" id="footer"></div>         
+        <!-- Ende des Dokumentes -->         
         <script>
 	        $("#header").load("header.html", function(){
 	        	setNav(2);
 	        });
-        </script>                           
+        </script>         
         <script src="js/bootstrap.js"></script>         
-        <script src="js/functions.js"></script>            
+        <script src="js/functions.js"></script>         
     </body>     
 </html>
