--- a/LeckerBag/WebContent/schulen_bearbeiten_lieferant.html
+++ b/LeckerBag/WebContent/schulen_bearbeiten_lieferant.html
@@ -21,12 +21,23 @@
                             <h3>Meine Schulen</h3>
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2" data-pg-collapsed>
-                            <a href="#" class=""><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
+                            <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br/>
                             <a>benötigen Sie hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line"/>
+                    <ol class="breadcrumb"> 
+                        <li>
+                            <a href="dashboard_lieferant.html">Mein Leckerbag</a>
+                        </li>                         
+                        <li>
+                            <a href="mein_profil_lieferant.html">Mein Profil</a>
+                        </li>
+                        <li>
+                            <font>Meine Schulen bearbeiten</font>
+                        </li>                         
+                    </ol>
                     <div class="row">
                         <div class="col-sm-12 col-xs-12 dash_element_col col-md-12 col-lg-12">
                             <div class="row dash_element_holder">
@@ -68,7 +79,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="col-lg-12 col-md-12 col-sm-6 col-xs-6 list_scroll">
-                                                <ul class="list-group" data-pg-collapsed> 
+                                                <ul class="list-group"> 
                                                     <li class="list-group-item" data-pg-collapsed>
                                                         <label data-pg-collapsed> 
                                                             <input class="control-label" type="checkbox" value="">                                                             
@@ -85,6 +96,30 @@
                                                         <b>Straße:</b> Kaiserstraße 35 
                                                         <b>Ort:</b> 97070 Würzburg 
                                                     </li>                                                     
+                                                    <li class="list-group-item" data-pg-collapsed>
+                                                        <label data-pg-collapsed> 
+                                                            <input class="control-label" type="checkbox" value="">                                                             
+                                                        </label>                                                         
+                                                        <b>Schule:</b> Grunschule West
+                                                        <b>Straße:</b> Semmelstraße 22 
+                                                        <b>Ort:</b> 97070 Würzburg 
+                                                    </li>
+                                                    <li class="list-group-item" data-pg-collapsed>
+                                                        <label data-pg-collapsed> 
+                                                            <input class="control-label" type="checkbox" value="">                                                             
+                                                        </label>                                                         
+                                                        <b>Schule:</b> Grunschule West
+                                                        <b>Straße:</b> Semmelstraße 22 
+                                                        <b>Ort:</b> 97070 Würzburg 
+                                                    </li>
+                                                    <li class="list-group-item" data-pg-collapsed>
+                                                        <label data-pg-collapsed> 
+                                                            <input class="control-label" type="checkbox" value="">                                                             
+                                                        </label>                                                         
+                                                        <b>Schule:</b> Grunschule West
+                                                        <b>Straße:</b> Semmelstraße 22 
+                                                        <b>Ort:</b> 97070 Würzburg 
+                                                    </li>
                                                     <li class="list-group-item" data-pg-collapsed>
                                                         <label data-pg-collapsed> 
                                                             <input class="control-label" type="checkbox" value="">                                                             
