--- a/LeckerBag/files/mein_profil_kunde.html
+++ b/LeckerBag/files/mein_profil_kunde.html
@@ -11,38 +11,29 @@
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href="css/bootstrap-responsive.css" rel="stylesheet">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
-        <script src="js/jquery.js"></script>
+        <script src="js/jquery.js"></script> 
         <script> 
 			$(function(){
 			  $("#header").load("header.html"); 
 			  $("#footer").load("footer.html"); 
 			});
-		</script>         
+		</script>        
     </head>     
-    <body>
-        <div class="row" id="header"></div>         
-        <div class="row">
+    <body>                   
+        <div class="row" data-pg-collapsed>
             <div class="col-md-12">
                 <div class="container wrapper">
-                    <div class="row" data-pg-collapsed>
-                        <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10" data-pg-collapsed>
+                    <div class="row">
+                        <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10">
                             <h3>Mein Profil</h3>
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2" data-pg-collapsed>
-                            <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
+                            <a href="#" class=""><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br/>
                             <a>benötigen Sie hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line"/>
-                    <ol class="breadcrumb"> 
-                        <li>
-                            <a href="dashboard_lieferant.html">Mein Leckerbag</a>
-                        </li>                         
-                        <li>
-                            <font>Mein Profil</font>
-                        </li>                         
-                    </ol>
                     <div class="row">
                         <div class="col-sm-12 col-xs-12 dash_element_col col-md-12 col-lg-12">
                             <div class="row dash_element_holder">
@@ -51,17 +42,17 @@
                                         <h4>Meine persönlichen Daten</h4> 
                                     </div>
                                     <div class="text-right col-md-6 col-lg-6 col-sm-6 col-xs-6">
-                                        <button id="btn_profil_kunde_edit" type="button" class="btn btn-default btn_icon btn_icon btn_icon_padding" onclick="" data-pg-collapsed>
+                                        <button id="btn_profil_kunde_edit" type="button" class="btn btn-default btn_icon btn_icon btn_icon_padding" onclick="editProfilKunde(false)" data-pg-collapsed>
                                             <i class="glyphicon glyphicon-pencil"></i>
                                         </button>
                                         <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed onclick="location.href='profil_loeschen_kunde.html'">
                                             <i class="glyphicon glyphicon-trash"></i>
                                         </button>                                         
                                     </div>
-                                    <div class="col-md-6 col-lg-6 profil_element col-sm-12 col-xs-12">
-                                        <div class="form-group"> 
-                                            <label class="control-label" for="formInput126">Unternehmen</label>
-                                            <input type="text" class="form-control profilTextfield" id="formInput126" placeholder="Müllerbäck" disabled="disabled">
+                                    <div class="col-md-6 col-lg-6 profil_element col-sm-12 col-xs-12" data-pg-collapsed>
+                                        <div class="form-group" data-pg-collapsed> 
+                                            <label class="control-label" for="formInput126">Titel</label>
+                                            <input type="text" class="form-control profilTextfield" id="formInput126" placeholder="Dr." disabled="disabled">
                                         </div>
                                         <div class="form-group" data-pg-collapsed> 
                                             <label class="control-label" for="formInput136">Vorname</label>
@@ -80,7 +71,7 @@
                                             <input type="text" class="form-control" id="formInput226" placeholder="xxxxxxxxxx">
                                         </div>                                         
                                     </div>
-                                    <div class="col-lg-6 col-md-6 profil_element col-sm-12 col-xs-12" data-pg-collapsed>
+                                    <div class="col-lg-6 col-md-6 profil_element col-sm-12 col-xs-12">
                                         <div class="form-group" data-pg-collapsed> 
                                             <label class="control-label" for="formInput154">Straße</label>
                                             <input type="text" class="form-control profilTextfield" id="formInput154" placeholder="Musterstraße 2" disabled="disabled">
@@ -103,32 +94,36 @@
                                         </div>                                         
                                     </div>
                                     <div class="col-lg-12 col-md-12 profil_kindliste col-sm-6 col-xs-6">
-                                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                                            <h4>Meine Schulen</h4> 
-                                        </div>
-                                        <div class="text-right col-md-6 col-lg-6 col-sm-6 col-xs-6" data-pg-collapsed>
-                                            <button id="btn_profil_kunde_edit" type="button" class="btn btn-default btn_icon btn_icon btn_icon_padding" onclick="location.href='schulen_bearbeiten_lieferant.html'" data-pg-collapsed>
-                                                <i class="glyphicon glyphicon-pencil"></i>
-                                            </button>
+                                        <div class="col-md-4" data-pg-collapsed>
+                                            <h4>Meine Kinder</h4> 
                                         </div>
                                         <table class="table kind_tabelle_breite"> 
-                                            <thead data-pg-collapsed> 
+                                            <thead> 
                                                 <tr class="kind_liste_tabelle"> 
+                                                    <th class="kind_liste_tabelle">Name</th>                                                     
                                                     <th class="kind_liste_tabelle">Schule</th>                                                     
-                                                    <th class="kind_liste_tabelle">Straße</th>                                                     
-                                                    <th class="kind_liste_tabelle">Ort</th>                                                     
+                                                    <th class="kind_liste_tabelle">Klasse</th>                                                     
+                                                    <th class="kind_liste_tabelle">Abonnement</th>
+                                                    <th class="kind_liste_tabelle">Bearbeiten</th>
                                                     <th class="kind_liste_tabelle">Entfernen</th>                                                     
                                                 </tr>                                                 
                                             </thead>                                             
-                                            <tbody class="tabelle_breite tablle_scroll tabelle_scroll"> 
+                                            <tbody> 
                                                 <tr> 
+                                                    <td>&nbsp;Arnold&nbsp;
+</td>                                                     
+                                                    <td>Röntgen Gymnasium</td>                                                     
+                                                    <td>5 a</td>
                                                     <td>
-                                                        <a>Röntgen Gymnasium
-                                                    </td>                                                     
-                                                    <td>Neubaustraße 3</td>
+                                                        <button type="button" class="btn btn-default button_paulo button_paulo_ext_dashboard">neues Abonnement abschließen 
+                                                            <i class="fa fa-chevron-right"></i> 
+                                                        </button>
+                                                    </td>
                                                     <td>
-                                                        97070 Würzburg
-</td>
+                                                        <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="">
+                                                            <i class="glyphicon glyphicon-pencil"></i>
+                                                        </button>                                                         
+                                                    </td>
                                                     <td>
                                                         <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="">
                                                             <i class="glyphicon glyphicon-trash"></i>
@@ -136,11 +131,20 @@
                                                     </td>
                                                 </tr>                                                 
                                                 <tr> 
+                                                    <td>&nbsp;Bernadette&nbsp;
+</td>                                                     
+                                                    <td>Grundschule Süd</td>                                                     
+                                                    <td>2 b</td>
                                                     <td>
-                                                        <a>Grundschule Süd
-                                                    </td>                                                     
-                                                    <td>Stephanstraße 9</td>
-                                                    <td>97070 Würzburg</td>
+                                                        <button type="button" class="btn btn-default button_paulo button_paulo_ext_dashboard">neues Abonnement abschließen 
+                                                            <i class="fa fa-chevron-right"></i> 
+                                                        </button>
+                                                    </td>
+                                                    <td>
+                                                        <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="">
+                                                            <i class="glyphicon glyphicon-pencil"></i>
+                                                        </button>
+                                                    </td>
                                                     <td>
                                                         <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="">
                                                             <i class="glyphicon glyphicon-trash"></i>
@@ -148,13 +152,20 @@
                                                     </td>
                                                 </tr>                                                 
                                                 <tr> 
+                                                    <td>&nbsp;Heino&nbsp;
+</td>                                                     
+                                                    <td>Bosch Gymnasium</td>                                                     
+                                                    <td>6 d</td>
                                                     <td>
-                                                        <a>Bosch Gymnasium
-                                                    </td>                                                     
-                                                    <td>Sanderring 12</td>
+                                                        <button type="button" class="btn btn-default button_paulo button_paulo_ext_dashboard">neues Abonnement abschließen 
+                                                            <i class="fa fa-chevron-right"></i> 
+                                                        </button>
+                                                    </td>
                                                     <td>
-                                                        97070 Würzburg
-</td>
+                                                        <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="">
+                                                            <i class="glyphicon glyphicon-pencil"></i>
+                                                        </button>
+                                                    </td>
                                                     <td>
                                                         <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="">
                                                             <i class="glyphicon glyphicon-trash"></i>
@@ -163,6 +174,11 @@
                                                 </tr>                                                 
                                             </tbody>
                                         </table>
+                                        <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 text-right">
+                                            <button type="button" class="btn-default button_paulo button_paulo_ext_dashboard">
+                                                <span></span> Kind hinzufügen 
+                                            </button>                                             
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -171,12 +187,13 @@
                 </div>                 
             </div>
         </div>         
-        <div class="row" id="footer" data-pg-collapsed></div>         
+       	<div class="row" id="footer"></div> 
+        <!-- Ende des Dokumentes -->    
         <script>
 	        $("#header").load("header.html", function(){
 	        	setNav(2);
 	        });
-        </script>         
+        </script>
         <!-- Ende des Dokumentes -->         
         <script src="js/jquery.js"></script>         
         <script src="js/bootstrap.js"></script>         
