--- a/LeckerBag/WebContent/mein_profil_kunde.html
+++ b/LeckerBag/WebContent/mein_profil_kunde.html
@@ -57,7 +57,7 @@
                                         <button id="btn_profil_kunde_save" type="button" class="btn btn-default btn_icon btn_icon btn_icon_padding" onclick="editProfilKunde(true)" style="display:none" data-pg-collapsed>
                                             <i class="fa fa-check"></i>
                                         </button>
-                                        <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed onclick="location.href='profil_loeschen_kunde.html'">
+                                        <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed>
                                             <i class="glyphicon glyphicon-trash"></i>
                                         </button>                                         
                                     </div>
@@ -122,8 +122,9 @@
                                             </thead>                                             
                                             <tbody> 
                                                 <tr> 
-                                                    <td>&nbsp;Arnold&nbsp;
-</td>                                                     
+                                                    <td>
+                                                        <a href="profil_kind.html">Arnold Mustermann</a>
+                                                    </td>                                                     
                                                     <td>Röntgen Gymnasium</td>                                                     
                                                     <td>5 a</td>
                                                     <td>
@@ -143,8 +144,9 @@
                                                     </td>
                                                 </tr>                                                 
                                                 <tr> 
-                                                    <td>&nbsp;Bernadette&nbsp;
-</td>                                                     
+                                                    <td>
+                                                        <a href="profil_kind.html">Bernadette Mustermann</a>
+                                                    </td>                                                     
                                                     <td>Grundschule Süd</td>                                                     
                                                     <td>2 b</td>
                                                     <td>
@@ -164,8 +166,9 @@
                                                     </td>
                                                 </tr>                                                 
                                                 <tr> 
-                                                    <td>&nbsp;Heino&nbsp;
-</td>                                                     
+                                                    <td>
+                                                        <a href="profil_kind.html">Heino Mustermann</a>
+                                                    </td>                                                     
                                                     <td>Bosch Gymnasium</td>                                                     
                                                     <td>6 d</td>
                                                     <td>
@@ -179,7 +182,7 @@
                                                         </button>
                                                     </td>
                                                     <td>
-                                                        <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="">
+                                                        <button type="button" class="btn btn-default btn_icon btn_icon" data-pg-collapsed="" onclick="location.href='kind_bearbeiten.html'">
                                                             <i class="glyphicon glyphicon-trash"></i>
                                                         </button>
                                                     </td>                                                     
@@ -187,8 +190,8 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 text-right" data-pg-collapsed>
-                                        <button type="button" class="btn-default button_paulo button_paulo_ext_dashboard">
+                                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 text-right">
+                                        <button type="button" class="btn-default button_paulo button_paulo_ext_dashboard" onclick="location.href='profil_loeschen_kind.html'">
                                             <span></span> Kind hinzufügen 
                                         </button>                                         
                                     </div>
